--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^4.0.4
   uuid: ^3.0.7
   flutter_carousel_slider: ^1.1.0
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
