--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_carousel_slider: ^1.1.0
   flutter_riverpod: ^2.3.6
+  simple_circular_progress_bar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
