--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_carousel_slider: ^1.1.0
   flutter_riverpod: ^2.3.6
   simple_circular_progress_bar: ^1.0.2
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
     - assets/images/oxygen.png
     - assets/images/pulse.png
     - assets/images/tooth-staining.png
+    - assets/images/savings.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
