--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   simple_circular_progress_bar: ^1.0.2
   flutter_slidable: ^3.0.0
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
