--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   simple_circular_progress_bar: ^1.0.2
   flutter_slidable: ^3.0.0
   image_picker: ^0.8.7+5
+  dropdown_button2: ^2.1.3
 
 dev_dependencies:
   flutter_test:
