--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   image_picker: ^0.8.7+5
   dropdown_button2: ^2.1.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
