--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^0.8.7+5
   dropdown_button2: ^2.1.3
   intl: ^0.18.1
+  sqflite: ^2.2.8+4
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
