--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   intl: ^0.18.1
   sqflite: ^2.2.8+4
   path: ^1.8.2
+  firebase_core: ^2.13.1
+  firebase_storage: ^11.2.2
+  firebase_database: ^10.2.2
 
 dev_dependencies:
   flutter_test:
